--- a/ci-cd-codepipeline.cfn.yml
+++ b/ci-cd-codepipeline.cfn.yml
@@ -9,7 +9,7 @@ Parameters:
   EksClusterName: 
     Type: String
     Description: The name of the EKS cluster created
-    Default: simple-jwt-api
+    Default: udacity-simple-jwt-api
     MinLength: 1
     MaxLength: 100
     ConstraintDescription: You must enter the EKS cluster name
@@ -17,7 +17,7 @@ Parameters:
   GitSourceRepo:
     Type: String
     Description: GitHub source repository - must contain a Dockerfile and buildspec.yml in the base
-    Default: https://github.com/madhrajan91/Flask_Docker_Kubernetes.git
+    Default: Flask_Docker_Kubernetes
     MinLength: 1
     MaxLength: 100
     ConstraintDescription: You must enter a GitHub repository name
